fixed h3/h4 size on mobile

--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ footer a
   .temperature h3
   {
     font-size: 2.5 rem;
-    padding-left: .9vw;
+    padding:0 1rem;
   }
   .alert
   {
